[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grandalf>=0.8",
    "ipython>=9.14.1",
    "langchain>=1.3.8",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.15",
    "python-dotenv>=1.2.2",
]
